tests/toy/neg/001611_mutation.toylang
program a = { while a do int sleep; } .
